@@ -81,6 +81,8 @@ typedef enum {
 #define	RPMURL_SERVER_HASDAVCLASS2	( 1 << 2)
 #define	RPMURL_SERVER_HASDAVEXEC	( 1 << 3)
 
+#define	RPMURL_SERVER_OPTIONSDONE	( 1 << 8)
+
 #define	RPMURL_SERVER_HASDAV	(RPMURL_SERVER_HASDAVCLASS1|RPMURL_SERVER_HASDAVCLASS2|RPMURL_SERVER_HASDAVEXEC)
     int magic;
 };
